# edgar3

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
edgar3/: __init__.py  edgar.py  edgar_index.py  filing.py  filing_13f.py
tests/: raw_filing.txt  raw_filing_2.txt  raw_filing_3.txt  raw_filing_4.txt  test.py  test_edgar.py  test_edgar3.py  test_edgar_index.py  test_filing.py  test_filing_13f.py
