[tool.poetry]
name = "edgar3"
version = "1.1"
description = "Simple 13F Edgar Extractor"
authors = ["Ken Farr <ken@farr.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
